tdf#157312 Don't change priority

Instances of this class are constructed with
TaskPriority::POST_PAINT, but then it was set to
TaskPriority::HIGHEST when reused. Flushing
seems to be expensive (at least with Skia/Metal) so keep the
existing priority when reused.

Change-Id: Ieb40cd6122f543f76e66456cc92a8643e2320d73
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/157162
Tested-by: Jenkins
Reviewed-by: Patrick Luby <plubius@neooffice.org>
(cherry picked from commit daa4a29c993df2e137b222ac3e60aa4b417a2d2d)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/157123
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>